Feat/rollback changes if not all successful (#91)
* Feat: split getRootTree function and add revertCommit function

This commit accomplishes 2 things: it takes the retrieval of commit and tree shas out of getRootTree (which obsoletes the function, since now getTree can be used), and adds a util function allowing a simple rollback of commits.

* Fix: update classes to use new implementation of util functions

* Feat: add route handler which allows for rollback

* Feat: update endpoints which may require rollback to use new handler

* Docs: update docs for sites endpoint

* Nit: fix revertCommit comment

* Fix: update rename pages to use rollback handler

* Fix: throw error instead of logging when encountered in getCommitAndTreeSha and getTree

* Chore: install new package

* Feat: add retry with exponential backoff for commit revertion

* Fix: rename error to be distinguish which error is being forwarded
